# GameEngine

./: CMakeLists.txt  imgui.ini  main.cpp  makefile  sfml-app-test
imgui/: imconfig.h  imgui-SFML.cpp
src/: main.cpp
src/core/: Engine.cpp  Engine.h
src/geometry/: Mesh.h  Triangle.h
src/math/: Mat4.h  vec3.h
src/render/: IRenderer.h  Renderer.cpp  Renderer.h
src/scene/: Camera.cpp  Camera.h  Object.h  Scene.h
